# claude-skill-maton

./: .gitignore  BRAINSTORM.md  PLAN.md  README.md  TASKS.md  pyproject.toml  skill.md
.claude/skills/maton/: SKILL.md
.claude/skills/maton/scanner/: reporter.py
.claude/skills/maton/scanner/rules/: __init__.py  dependencies.py  execution.py  obfuscation.py
.claude/skills/maton/scripts/scanner/: models.py
scanner/: __main__.py  core.py  loader.py
scanner/rules/: __init__.py  agent.py  base.py  execution.py  exfiltration.py  injection.py
skills/maton/: REFERENCE.md  SKILL.md
skills/maton/scripts/scanner/: __init__.py
skills/maton/scripts/scanner/rules/: persistence.py
tests/: __init__.py  conftest.py  test_core.py  test_loader.py  test_reporter.py
tests/fixtures/malicious_skill/: agent.md  config.json  helper.py  skill.md
tests/fixtures/safe_skill/: skill.md  utils.py
tests/test_rules/: test_agent.py  test_dependencies.py  test_execution.py  test_exfiltration.py  test_injection.py  test_obfuscation.py  test_persistence.py
